<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pybullet_ros2</name>
  <version>0.0.0</version>
  <description>A ROS2 interface to PyBullet</description>
  <maintainer email="jafar.uruc@gmail.com">Jafar Uruç</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/JafarAbdi/pybullet_ros2</url>
  <url type="bugtracker">https://github.com/JafarAbdi/pybullet_ros2/issues</url>
  <url type="repository">https://github.com/JafarAbdi/pybullet_ros2/</url>
  <depend>rclpy</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
